# arm_navigation_experimental

./: .hgignore  CMakeLists.txt  stack.xml
arm_navigation_experimental_tools/: CMakeLists.txt  mainpage.dox
arm_navigation_experimental_tools/launch/: current_state_validator.launch
arm_navigation_experimental_tools/src/: current_state_validator.cpp
chomp_motion_planner/: CMakeLists.txt  manifest.xml
chomp_motion_planner/include/chomp_motion_planner/: chomp_collision_space.h  chomp_cost.h  chomp_optimizer.h  chomp_parameters.h  chomp_planner_node.h  chomp_robot_model.h
chomp_motion_planner/launch/: chomp_node.launch
chomp_motion_planner/src/: chomp_collision_space.cpp  chomp_optimizer.cpp  chomp_parameters.cpp  chomp_planner_node.cpp  chomp_robot_model.cpp  chomp_trajectory.cpp
collider/: CMakeLists.txt  manifest.xml
collider/include/collider/: collider.h
collider/src/: collider.cpp
collider/src/collider/: construct_static_collision_map.py
collision_checking/: CMakeLists.txt  mainpage.dox  manifest.xml
collision_checking/include/collision_checking/: BV.h  BVH_defs.h  BVH_front.h  BVH_model.h  BVH_split_rule.h  BV_fitter.h  aabb.h  collision.h  collision_geom.h  collision_primitive.h  conservative_advancement.h  continuous_collision.h  distance_primitive.h  intersect.h  kDOP.h  obb.h  primitive.h  proximity.h  rss.h  vec_3f.h
collision_checking/src/: BVH_model.cpp  BVH_split_rule.cpp  BV_fitter.cpp  collision.cpp  collision_primitive.cpp  conservative_advancement.cpp  distance_primitive.cpp  intersect.cpp  obb.cpp  proximity.cpp  rss.cpp  vec_3f.cpp
collision_free_arm_trajectory_controller/: CMakeLists.txt  manifest.xml
collision_free_arm_trajectory_controller/src/: collision_free_arm_trajectory_controller.cpp
collision_proximity/: manifest.xml
collision_proximity/include/collision_proximity/: collision_proximity_space.h  collision_proximity_types.h
collision_proximity/src/: collision_proximity_server_test.cpp  collision_proximity_space.cpp  collision_proximity_speed_test.cpp  collision_proximity_test.cpp  collision_proximity_types.cpp
collision_proximity_planner/include/collision_proximity_planner/: collision_proximity_planner.h  collision_proximity_planner_plugin.h
collision_proximity_planner/src/: chomp_robot_model.cpp  collision_proximity_planner.cpp  collision_proximity_planner_plugin.cpp
collision_space_ccd/: CMakeLists.txt  mainpage.dox  manifest.xml
collision_space_ccd/include/collision_space_ccd/: environment.h  environmentBVH.h  environment_objects.h  interval_tree.h
collision_space_ccd/src/: environment.cpp  environmentBVH.cpp  environment_objects.cpp  interval_tree.cpp
collision_space_ccd/test/: test_collision_core.cpp  test_collision_space_ccd.cpp
collision_space_ccd_test/: CMakeLists.txt  manifest.xml
collision_space_ccd_test/test/: test_collision_space_ccd.cpp
head_monitor_msgs/: mainpage.dox  manifest.xml
head_monitor_msgs/action/: HeadMonitor.action  PreplanHeadScan.action
interpolated_ik_motion_planner/: CMakeLists.txt  manifest.xml
interpolated_ik_motion_planner/include/interpolated_ik_motion_planner/: interpolated_ik_motion_planner.h
interpolated_ik_motion_planner/launch/: kinematics.launch  kinematics.yaml  others.launch
interpolated_ik_motion_planner/scripts/: interpolated_ik_motion_planner.py
interpolated_ik_motion_planner/src/: interpolated_ik_motion_planner.cpp  main.cpp
interpolated_ik_motion_planner/src/interpolated_ik_motion_planner/: ik_utilities.py
interpolated_ik_motion_planner/test/: test_interpolated_ik_motion_planner.py
move_arm/: manifest.xml
move_arm_head_monitor/: CMakeLists.txt  manifest.xml
move_arm_head_monitor/src/: move_arm_head_monitor.cpp
move_arm_warehouse/: CMakeLists.txt  Makefile  manifest.xml
move_arm_warehouse/config/: filters.yaml  shortcutting_filters.yaml  smoothing_filters.yaml
move_arm_warehouse/include/move_arm_warehouse/: move_arm_utils.h  move_arm_warehouse_logger.h  move_arm_warehouse_logger_reader.h  move_arm_warehouse_reader.h  planning_scene_warehouse_viewer.h  trajectory_stats.h
move_arm_warehouse/launch/: chomp_planning.launch  planning_scene_visualizer_prerequisites.launch  planning_scene_visualizer_prerequisites_simulator.launch  planning_scene_warehouse_viewer_darpa_arm_robot.launch  planning_scene_warehouse_viewer_maxwell.launch  planning_scene_warehouse_viewer_only.launch  planning_scene_warehouse_viewer_pr2.launch  planning_scene_warehouse_viewer_pr2_localhost.launch  planning_scene_warehouse_viewer_pr2_only.launch  planning_scene_warehouse_viewer_pr2_real.launch  planning_scene_warehouse_viewer_rosie.launch  test_move_arm_logging.launch  test_warehouse_viewer.launch
move_arm_warehouse/scripts/: create_launch_files.pl  create_launch_files.py  planning_scene_warehouse_viewer_template.launch  planning_scene_warehouse_viewer_template.vcg
move_arm_warehouse/src/: move_arm_simple_action.cpp  move_arm_utils.cpp  move_arm_warehouse_logger.cpp  move_arm_warehouse_logger_reader.cpp  move_arm_warehouse_reader.cpp  planning_scene_warehouse_viewer.cpp  trajectory_stats.cpp  warehouse_components_visualizer.cpp
move_arm_warehouse/test/: move_arm_utils_test.cpp  testMotionExecutionBuffer.py  testMovingOutOfAttachedContact.py  testMovingOutOfTableContact.py
ompl_ros_interface/: manifest.xml
ompl_ros_interface/include/ompl_ros_interface/: ompl_ros_planning_group.h
ompl_ros_interface/src/: ompl_ros_planning_group.cpp
ompl_ros_interface/src/helpers/: ompl_ros_conversions.cpp
ompl_ros_interface/src/planners/: ompl_ros_joint_planner.cpp
ompl_ros_interface/src/state_validity_checkers/: ompl_ros_joint_state_validity_checker.cpp
trajectory_execution_monitor/: CMakeLists.txt  mainpage.dox  manifest.xml
trajectory_execution_monitor/include/trajectory_execution_monitor/: follow_joint_trajectory_controller_handler.h  joint_state_recorder.h  (+5 more)
trajectory_execution_monitor/src/: trajectory_controller_handler.cpp  trajectory_execution_monitor.cpp  trajectory_execution_monitor_test.cpp  trajectory_recorder.cpp  trajectory_stats.cpp
(+2 files in other folders)
